--- a/package.json
+++ b/package.json
@@ -113,11 +113,13 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-storybook": "^9.0.15",
     "husky": "^9.1.7",
-    "jest": "^30.0.4",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
     "jest-junit": "^16.0.0",
-    "jest-preset-angular": "^14.6.0",
+    "jest-preset-angular": "^15.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "source-map": "^0.7.6",
     "source-map-explorer": "^2.5.3",
     "storybook": "^9.0.15",
     "ts-node": "~10.9.2",
