--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -2,9 +2,9 @@ name: PR Build and Test
 
 on:
   pull_request:
-    branches: [main, development]
+    branches: [main, master, development]
   push:
-    branches: [main, development]
+    branches: [main, master, development]
 
 jobs:
   frontend:
@@ -39,7 +39,7 @@ jobs:
 
       - name: Run unit tests
         run: npm run test:ci
-        continue-on-error: true  # Only until Jest config is fixed
+        continue-on-error: true # Only until Jest config is fixed
 
       - name: Run e2e tests
         run: |
@@ -69,4 +69,4 @@ jobs:
 
       - name: Run .NET tests
         run: dotnet test ReminderAPI/ReminderAPI.csproj --no-build --configuration Release --verbosity normal
-        continue-on-error: true  # Only until .NET tests are added
+        continue-on-error: true # Only until .NET tests are added
